Dead code: function jmm_GetLoadedClasses is not used in jmm_interface

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 10
    • Affects Version/s: 9, 10
    • Component/s: hotspot
    • None
    • svc
    • b21
    • generic
    • generic

      It was found at the review of the 8155672 that the function jmm_GetLoadedClasses() defined in services/management.cpp is not really used in the jmm_interface.
      This function and dead code associated with its implementation can be removed.

            Assignee:
            Serguei Spitsyn
            Reporter:
            Serguei Spitsyn
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: