8176831: Dead code: function jmm_GetLoadedClasses is not used in jmm_interface

Remove the dead code

Reviewed-by: dholmes, coleenp